# Penumbra

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
animation/: spiral_teapots_anim.py  turntable.py  vod.bat
buildscripts/: build.bat  build.sh
cmake/: CompilerOptimizations.cmake
enc_temp_folder/79953fd306d0c18e4f8469ad6753a/: fly_right.pbrt
images/: combine.ps1
penumbra/include/: camera.h  color.h  environmentmap.h  gui.h  image.h  lights.h  main.h  materials.h  pbrtconverter.h  pbrtloader.h  raytracing.h  renderer.h  sampling.h  scene.h  shading.h  shapes.h  texture.h  threading.h  tinybvh_glm_config.h  utils.h  viewport.h
penumbra/src/: camera.cpp  color.cpp  environmentmap.cpp  gui.cpp  image.cpp  lights.cpp  main.cpp  materials.cpp  pbrtconverter.cpp  pbrtloader.cpp  renderer.cpp  sampling.cpp  shading.cpp  shapes.cpp  texture.cpp  threading.cpp  tinybvh_impl.cpp  utils.cpp  viewport.cpp
resources/scenes/: cornell.pbrt  cornell_left.pbrt  fly_left.pbrt  fly_right.pbrt  test.pbrt
scenes/: Cornell.pbrt
tests/: verify_libraries.cpp
